# battlefun-io

./: .dockerignore  .gitignore  Dockerfile-backend  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md  build.rs
backend/src/: error.rs  game.rs  game_handler.rs  handler.rs  main.rs  ws.rs
backend/src/battlefun/: battlefun.rs  gamemaster.rs  kafka.rs  matchmaking.rs  mod.rs
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Game.tsx  Grid.styled.tsx  Grid.tsx  Ships.styled.tsx  Ships.tsx  UserProvider.tsx  Welcome.tsx  index.tsx  react-app-env.d.ts  setupProxy.js  types.d.ts
frontend/src/game/: Game.tsx  PlaceShips.tsx  PlayerTurn.tsx  index.ts
frontend/src/utils/: breakpoints.ts  fakeGameState.tsx  getApiHost.ts  mergeDeep.ts
hack/: Dockerfile  main.py
proto/: battlefunio.proto  test.proto
scripts/: demo.sh
statefun/: Dockerfile  pom.xml
statefun/src/main/java/io/battlefun/: Constants.java  Either.java  FailureCodes.java  GameFn.java  GameLogic.java  GameLogicUtil.java  Module.java
statefun/src/test/java/io/battlefun/: GameLogicTest.java
