[package]
name = "battleship_gateway"
version = "0.1.0"
authors = ["Patrick Lucas <me@patricklucas.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "signal", "sync"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = { version = "1.0" }
