[package]
name = "battlefun_io"
version = "0.1.0"
authors = ["Patrick Lucas <me@patricklucas.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", default-features = false }
prost = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0" }
tokio = { version = "0.2", features = ["macros", "signal", "sync"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"

[build-dependencies]
prost-build = "0.6"
